# matsim-example-project

./: .gitattributes  README.md  main.py  pyproject.toml
.github/workflows/: docs-pages.yml  python.yml
docs/: index.html
src/main/python/: README.md  pipeline_runner.py
src/main/python/matsim_example_project/: __init__.py  cli.py
src/matsim_example_project/: __init__.py  cli.py  simulator.py
tests/: test_simulator.py
