[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matsim-example-project"
version = "1.0.0"
description = "Python-native MATSim scenario inspection toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-2.0-only"}
authors = [{name = "matsim-example-project contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
matsim-example = "matsim_example_project.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
